Fix AI Settings panel for very narrow width
Previously even when scrolling to the very left, the left part of the
settings was cut off.

Screenshots: https://imgur.com/a/p765TKG

Bug: b/350668580

--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -147,7 +147,6 @@
   border-top: 1px solid var(--sys-color-divider);
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 header {
